# Markovid-19

./: main.py  markovid_data.txt  pyproject.toml
